--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-indiana-drag-scroll": "^2.2.0",
+    "server-only": "^0.0.1",
     "viem": "^2.7.22",
     "wagmi": "^2.5.7"
   },
